Moved the LiquiabseTask.configure code to the constructor to be more future-proof with respect to Gradle versions