@@ -36,7 +36,6 @@ repositories {
 }
 
 dependencies {
-    compileOnly localGroovy()
     compileOnly gradleApi()
     compileOnly "org.codehaus.groovy:groovy:${groovyVersion}"
     compileOnly "org.liquibase:liquibase-core:${liquibaseCoreVersion}"
@@ -87,7 +86,11 @@ tasks.named("testClasses") {task ->
 }
 
 // Use JUnit Platform for tests
-tasks.withType(Test).configureEach { useJUnitPlatform() }
+tasks.withType(Test).configureEach {
+    useJUnitPlatform()
+    jvmArgs = jvmArgs + ['--add-opens=java.base/java.lang=ALL-UNNAMED']
+    jvmArgs = jvmArgs + ['--add-opens=java.base/java.lang.invoke=ALL-UNNAMED']
+}
 
 // Configure the Gradle Portal plugin.  Note that the ID must match it's Gradle Plugin Portal id.
 gradlePlugin {
